2006-05-15  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.glade:
	* libempathy-gtk/empathy-main-window.glade: Fix using of gossip icons
	in menus.

2006-05-14  Xavier Claessens  <xclaesse@gmail.com>

	* src/empathy-chat-main.c:
	* src/empathy-main.c:
	* configure.ac:
	* data/22x22/Makefile.am:
	* data/22x22/empathy.png:
	* data/48x48:
	* data/48x48/Makefile.am:
	* data/48x48/empathy.png:
	* data/32x32/Makefile.am:
	* data/32x32/empathy.png:
	* data/16x16/empathy.png:
	* data/16x16/Makefile.am:
	* data/scalable/empathy.svg:
	* data/scalable/Makefile.am:
	* data/Makefile.am: Add empathy icon stolen from cohoba.

2006-05-14  Xavier Claessens  <xclaesse@gmail.com>

	* src/empathy-chat-main.c:
	* src/Makefile.am:
	* src/empathy-main.c:
	* po/POTFILES.in
	* po/LINGUAS:
	* TODO: Setting up i18n support.

	* po/Makefile.in.in: Removed, it's generated at build time.

2006-05-13  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-account-widget-jabber.glade: Add an example
	label for jid.

2006-05-13  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-chat-window.c:
	* libempathy-gtk/gossip-chat-window.h:
	* src/empathy-chat-main.c:
	* libempathy/empathy-tp-chat.c:
	* libempathy/empathy-tp-chat.h: When a new text channel arrives, check
	if there is no existing GossipChat object for it.

2006-05-13  Xavier Claessens  <xclaesse@gmail.com>

	* src/Makefile.am:
	* src/empathy-contact-list-main.c: Removing empathy-contact-list
	program, it's useless.

2006-05-13  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Change version from 0.3darcs to 0.3svn

2006-05-13  Xavier Claessens  <xclaesse@gmail.com>

	* autogen.sh: Set executable
	* po/POTFILES.in: Update translatable files

2006-03-16  Xavier Claessens  <xclaesse@gmail.com>

	* Initial version
