@@ -1,11 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-_Name=Empathy
-_Comment=Gnome Instant Messaging Client
-Icon=empathy
-Exec=empathy
-Terminal=false
-Type=Application
-Categories=GNOME;GTK;Network;InstantMessaging;
-OnlyShowIn=GNOME
-
