@@ -1,0 +1,15 @@
+[Desktop Entry]
+Version=1.0
+Encoding=UTF-8
+_Name=Empathy Instant Messenger
+_Comment=Instant Messenger
+Exec=empathy
+Icon=empathy
+StartupNotify=false
+Terminal=false
+Type=Application
+Categories=GNOME;GTK;Network;InstantMessaging;
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=empathy
+X-GNOME-Bugzilla-Component=@BUGZILLA_COMPONENT@
+X-GNOME-Bugzilla-Version=@VERSION@
